@@ -2,10 +2,8 @@ package com.github.spud.tinystore.order.infrastructure.persistence.repository;
 
 import com.github.spud.tinystore.order.domain.event.OutboxEventEnvelope;
 import com.github.spud.tinystore.order.domain.model.Outbox;
+import com.github.spud.tinystore.order.domain.model.Outbox.PublishStatus;
 import com.github.spud.tinystore.order.domain.repository.OutboxRepository;
-import lombok.extern.slf4j.Slf4j;
-import org.springframework.stereotype.Repository;
-
 import java.time.Instant;
 import java.time.LocalDateTime;
 import java.util.List;
@@ -13,10 +11,11 @@ import java.util.Map;
 import java.util.UUID;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.stream.Collectors;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.stereotype.Repository;
 
 /**
- * Outbox 仓储的内存实现
- * 用于开发阶段，生产环境应使用数据库实现
+ * Outbox 仓储的内存实现 用于开发阶段，生产环境应使用数据库实现
  *
  * @author Spud
  * @date 2025/9/22
@@ -29,7 +28,8 @@ public class InMemoryOutboxRepository implements OutboxRepository {
 
 	public void save(Outbox outbox) {
 		storage.put(outbox.getEventId(), outbox);
-		log.debug("Saved outbox event: eventId={}, eventType={}", outbox.getEventId(), outbox.getEventType());
+		log.debug("Saved outbox event: eventId={}, eventType={}", outbox.getEventId(),
+			outbox.getEventType());
 	}
 
 	@Override
@@ -84,13 +84,14 @@ public class InMemoryOutboxRepository implements OutboxRepository {
 	public List<Outbox> findEventsForRetry(Instant beforeTime, int limit) {
 		return storage.values().stream()
 			.filter(event -> event.getStatus() == Outbox.PublishStatus.FAILED)
-			.filter(event -> event.getNextRetryAt() != null && event.getNextRetryAt().isBefore(beforeTime))
+			.filter(
+				event -> event.getNextRetryAt() != null && event.getNextRetryAt().isBefore(beforeTime))
 			.limit(limit)
 			.collect(Collectors.toList());
 	}
 
 	public void updateStatus(UUID eventId, Outbox.PublishStatus status,
-	                         Integer retryCount, Instant nextRetryAt, String errorMessage) {
+		Integer retryCount, Instant nextRetryAt, String errorMessage) {
 		Outbox event = storage.get(eventId);
 		if (event != null) {
 			event.setStatus(status);
@@ -103,31 +104,28 @@ public class InMemoryOutboxRepository implements OutboxRepository {
 	}
 
 	@Override
-	public void markAsPublished(UUID eventId) {
-		Outbox event = storage.get(eventId);
-		if (event != null) {
-			event.setStatus(Outbox.PublishStatus.PUBLISHED);
-			event.setPublishedAt(Instant.now());
-			log.debug("Marked outbox event as published: eventId={}", eventId);
-		}
-	}
-
-	@Override
-	public void updateStatus(UUID eventId, Outbox.PublishStatus publishStatus, int newRetryCount, Instant nextRetryAt, String errorMessage) {
-
-	}
-
-	@Override
 	public int deletePublishedEventsBefore(Instant beforeTime) {
-		List<UUID> toDelete = storage.values().stream()
+		List<String> toDelete = storage.values().stream()
 			.filter(event -> event.getStatus() == Outbox.PublishStatus.PUBLISHED)
-			.filter(event -> event.getPublishedAt() != null && event.getPublishedAt().isBefore(beforeTime))
+			.filter(
+				event -> event.getPublishedAt() != null && event.getPublishedAt().isBefore(beforeTime))
 			.map(Outbox::getEventId)
-			.collect(Collectors.toList());
+			.toList();
 
 		toDelete.forEach(storage::remove);
 
 		log.info("Deleted {} published outbox events before {}", toDelete.size(), beforeTime);
 		return toDelete.size();
+	}
+
+	@Override
+	public void markAsPublished(String eventId) {
+
+	}
+
+	@Override
+	public void updateStatus(String eventId, PublishStatus publishStatus, int newRetryCount,
+		Instant nextRetryAt, String errorMessage) {
+
 	}
 }
